overlap issue

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -53,6 +53,7 @@ a {
     font-weight: bold;
     font-size: 2rem !important;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .btn-stat-container{
